# core-plugins-catalyst

./: .clang-tidy  .gitignore  .license-tools-config.json  .pre-commit-config.yaml  .readthedocs.yaml  AGENTS.md  CHANGELOG.md  CITATION.cff  CMakeLists.txt  CMakePresets.json  README.md  UPGRADING.md  example.ipynb  noxfile.py  pyproject.toml
.github/: CONTRIBUTING.md  SECURITY.md  SUPPORT.md  codecov.yml  pull_request_template.md  release-drafter.yml  renovate.json5
.github/ISSUE_TEMPLATE/: bug-report.yml  feature-request.yml
.github/workflow_inputs/: release_drafter_categories.json
.github/workflows/: cd.yml  ci.yml  reusable-cpp-linter.yml  reusable-mlir-tests.yml  reusable-python-tests.yml  templating.yml
cmake/: ExternalDependencies.cmake
docs/: Doxyfile  README.md  ai_usage.md  conf.py  contributing.md  index.md  installation.md  references.md  refs.bib  requirements.txt  tooling.md
docs/mlir/: .gitignore  Conversions.md  MQTOpt.md  MQTRef.md  index.md
include/: CMakeLists.txt
include/mlir/: CMakeLists.txt
include/mlir/Conversion/: CMakeLists.txt
include/mlir/Conversion/CatalystQuantumToMQTOpt/: CMakeLists.txt  CatalystQuantumToMQTOpt.h  CatalystQuantumToMQTOpt.td
include/mlir/Conversion/CatalystQuantumToQC/: CMakeLists.txt  CatalystQuantumToQC.h  CatalystQuantumToQC.td
include/mlir/Conversion/MQTOptToCatalystQuantum/: CMakeLists.txt  MQTOptToCatalystQuantum.h  MQTOptToCatalystQuantum.td
include/mlir/Conversion/QCToCatalystQuantum/: CMakeLists.txt  QCToCatalystQuantum.h  QCToCatalystQuantum.td
lib/: CMakeLists.txt  mqt-plugin.cpp
lib/Conversion/: CMakeLists.txt
lib/Conversion/CatalystQuantumToMQTOpt/: CMakeLists.txt  CatalystQuantumToMQTOpt.cpp
lib/Conversion/CatalystQuantumToQC/: CMakeLists.txt  CatalystQuantumToQC.cpp
lib/Conversion/MQTOptToCatalystQuantum/: CMakeLists.txt  MQTOptToCatalystQuantum.cpp
lib/Conversion/QCToCatalystQuantum/: CMakeLists.txt  QCToCatalystQuantum.cpp
python/mqt/core/plugins/catalyst/: __init__.py  _version.pyi  device.py  plugin.py
test/: CMakeLists.txt  lit.cfg.py  lit.site.cfg.py.in  test_plugin.py  test_plugin_setup.py
test/Conversion/: mqtopt_clifford.mlir  mqtopt_entangling.mlir  mqtopt_ising.mlir  mqtopt_param.mlir  mqtopt_pauli.mlir  quantum_clifford.mlir  quantum_entangling.mlir  quantum_ising.mlir  quantum_param.mlir  quantum_pauli.mlir
test/python/: test_placeholder.py  test_plugin.py  test_plugin_setup.py
