# Copyright (c) 2025 Chair for Design Automation, TUM
# Copyright (c) 2025 Munich Quantum Software Company GmbH
# All rights reserved.
#
# SPDX-License-Identifier: MIT
#
# Licensed under the MIT License

[build-system]
requires = ["scikit-build-core>=0.11.6", "setuptools-scm>=9.2.2", "pennylane-catalyst~=0.13.0"]
build-backend = "scikit_build_core.build"

[project]
name = "mqt-core-plugins-catalyst"
description = "An MLIR plugin for connecting MQT Core with Xanadu's Catalyst"
readme = "README.md"
authors = [
    { name = "Patrick Hopf", email = "patrick.hopf@tum.de" },
    { name = "Yannick Stade", email = "yannick.stade@tum.de" },
    { name = "Lukas Burgholzer", email = "burgholzer@me.com" }
]
keywords = ["MQT", "quantum-computing", "design-automation", "PennyLane", "Catalyst", "MLIR", "plugin"]
license = "MIT"
license-files = ["LICENSE.md"]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Natural Language :: English",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: C++",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
  "Typing :: Typed",
]
requires-python = ">=3.11"
dynamic = ["version"]
dependencies = [
  "pennylane-catalyst~=0.13.0",
]

[project.urls]
Homepage = "https://github.com/munich-quantum-toolkit/core-plugins-catalyst"
Changelog = "https://github.com/munich-quantum-toolkit/core-plugins-catalyst/blob/main/CHANGELOG.md"
Documentation = "https://mqt.readthedocs.io/projects/core-plugins-catalyst"
Issues = "https://github.com/munich-quantum-toolkit/core-plugins-catalyst/issues"
Discussions = "https://github.com/munich-quantum-toolkit/core-plugins-catalyst/discussions"
PyPI = "https://pypi.org/project/mqt-core-plugins-catalyst/"

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"

# Set the wheel install directory
wheel.install-dir = "mqt/core/plugins/catalyst"

# Explicitly set the package directory
wheel.packages = ["python/mqt"]

# Enable Stable ABI builds for CPython 3.12+
wheel.py-api = "cp311"

# Set required Ninja version
ninja.version = ">=1.10"

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}/{build_type}"

# All the targets to build
build.targets = [
  "mqt-core-plugins-catalyst",
]

install.components = [
  "mqt-core-plugins-catalyst_Python",
]

metadata.version.provider = "scikit_build_core.metadata.setuptools_scm"
sdist.include = ["python/mqt/core/plugins/catalyst/_version.py"]
sdist.exclude = [
    "**/.github",
    "**/doc",
    "**/docs",
    "**/eval",
    "**/meta",
    "**/paper",
    "**/plots",
    "**/test",
    "**/tests",
]

[tool.check-sdist]
sdist-only = ["python/mqt/core/plugins/catalyst/_version.py"]
git-only = [
    "docs/*",
    "test/*",
]


[tool.setuptools_scm]
write_to = "python/mqt/core/plugins/catalyst/_version.py"


[tool.check-wheel-contents]
ignore = [
  "W002", # Wheel contains duplicate files (.so symlinks)
  "W004", # Module is not located at importable path (/lib/mqt-core-*.so)
]


[tool.pytest]
minversion = "9.0"
strict = true
addopts = [
  "-ra",
  "--numprocesses=auto", # Automatically use all available CPU cores for parallel testing
]
filterwarnings = [
]
log_level = "INFO"
testpaths = ["test/python"]


[tool.coverage]
run.source = ["mqt.core.plugins.catalyst"]
run.omit = [
    '*/_compat/*',
]
run.disable_warnings = [
  "no-sysmon",
]
report.exclude_also = [
  '\.\.\.',
  'if TYPE_CHECKING:',
  'raise AssertionError',
  'raise NotImplementedError',
  'def __dir__()',  # Ignore __dir__ method that exists mainly for better IDE support
  '@overload'  # Overloads are only for static typing
]

[tool.mypy]
files = ["python/mqt", "test/python", "noxfile.py"]
mypy_path = ["$MYPY_CONFIG_FILE_DIR/python"]
python_version = "3.11"
warn_unused_configs = true
enable_error_code = ["ignore-without-code", "redundant-expr", "truthy-bool"]
strict = true
disallow_untyped_defs = false
explicit_package_bases = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["pytest_console_scripts.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 120
namespace-packages = ["mqt"]
preview = true
fix = true
unsafe-fixes = true
show-fixes = true
src = ["python"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "C90",     # <...> too complex
    "COM812",  # Conflicts with formatter
    "PLR09",   # Too many <...>
    "PLR2004", # Magic value used in comparison
    "S101",    # Use of assert detected
    "S404",    # `subprocess` module is possibly insecure
    "TID252"   # Prefer absolute imports over relative imports from parent modules
]
future-annotations = true

[tool.ruff.lint.isort]
known-first-party = ["mqt.core.plugins.catalyst"]

[tool.ruff.lint.per-file-ignores]
"test/python/**" = ["T20", "INP001"]
"test/lit.cfg.py" = ["INP001"]
"docs/**" = ["T20", "INP001"]
"noxfile.py" = ["T20", "TID251"]
"*.pyi" = ["D418", "DOC202", "PYI011", "PYI021"]
"*.ipynb" = [
    "D",    # pydocstyle
    "E402", # Allow imports to appear anywhere in Jupyter notebooks
    "I002", # Allow missing `from __future__ import annotations` import
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
docstring-code-format = true


[tool.typos]
default.extend-ignore-re = [
  "(?Rm)^.*(#|//)\\s*spellchecker:disable-line$",  # ignore line
  "(?s)(#|//)\\s*spellchecker:off.*?\\n\\s*(#|//)\\s*spellchecker:on", # ignore block
  "FoMaC"
]

[tool.typos.default.extend-words]
wille = "wille"
anc = "anc"
mch = "mch"
ket = "ket"
optin = "optin"


[tool.repo-review]
ignore = ["GH200"]


[tool.cibuildwheel]
build = "cp3*"
skip = ["*-musllinux_*", "cp314*"] # No CPython 3.14 support yet
test-groups = ["test"]
test-sources = ["test/python"]
test-command = "pytest test/python"
build-frontend = "build[uv]"

[tool.cibuildwheel.linux]
archs = ["x86_64", "aarch64"]
before-all = [
  "uv tool install sccache>=0.10.0",
  "yum install -y jq zstd",
  "mkdir -p /tmp/mlir",
  "curl -LsSf https://github.com/munich-quantum-software/setup-mlir/releases/latest/download/setup-mlir.sh | bash -s -- -v f8cb798 -p /tmp/mlir",
]
environment = { DEPLOY = "ON", PATH="$PATH:/root/.local/bin", MLIR_DIR="/tmp/mlir/lib/cmake/mlir" }
before-test = "uvx sccache --show-stats"

[tool.cibuildwheel.macos]
archs = ["arm64"]
before-all = [
  "brew install jq zstd",
  "mkdir -p /tmp/mlir",
  "curl -Lf https://github.com/munich-quantum-software/setup-mlir/releases/latest/download/setup-mlir.sh | bash -s -- -v f8cb798 -p /tmp/mlir",
]
environment = { MACOSX_DEPLOYMENT_TARGET = "13.0", MLIR_DIR="/tmp/mlir/lib/cmake/mlir" }

[[tool.cibuildwheel.overrides]]
select = "cp311-*"
inherit.repair-wheel-command = "append"
repair-wheel-command = "uvx abi3audit --strict --report {wheel}"


[tool.uv]
# Only resolve on Linux (x86_64 and arm64) and macOS (arm64)
environments = [
  "sys_platform == 'darwin' and platform_machine == 'arm64'",
  "sys_platform == 'linux'",
]
reinstall-package = ["mqt-core-plugins-catalyst"]


[tool.ty.terminal]
# Error if ty emits any warning-level diagnostics.
error-on-warning = true

[tool.ty.src]
exclude = [
    "docs/**",
    "eval/**",
    "mlir/**",
    "test/lit.cfg.py",
]


[dependency-groups]
build = [
  "scikit-build-core>=0.11.6",
  "setuptools-scm>=9.2.2",
  "pennylane-catalyst~=0.13.0",
]
docs = [
  "furo>=2025.12.19",
  "myst-nb>=1.3.0",
  "setuptools-scm>=9.2.2",
  "sphinx-autoapi>=3.6.1",
  "sphinx-copybutton>=0.5.2",
  "sphinx-design>=0.6.1",
  "sphinxcontrib-bibtex>=2.6.5",
  "sphinxcontrib-svg2pdfconverter>=1.3.0",
  "sphinxext-opengraph>=0.13.0",
  "openqasm-pygments>=0.2.0",
  "breathe>=4.36.0",
  "graphviz>=0.21.0",
  "sphinx>=8.2.3",
]
test = [
  "pytest>=9.0.1",
  "pytest-console-scripts>=1.4.1",
  "pytest-cov>=7.0.0",
  "pytest-sugar>=1.1.1",
  "pytest-xdist>=3.8.0",
]
dev = [
  {include-group = "build"},
  {include-group = "test"},
  "lit>=18.1.8",
  "nox>=2025.11.12",
  "ty==0.0.5",
]
